# Primoria

./: .gitignore  Cargo.toml  Makefile  README.md  rust-project.json  x86_64-baremetal.json
.cargo/: config.toml
src/: apps.rs  kernel.rs  lib.rs  main.rs
src/drivers/: ata.rs  keyboard.rs  mod.rs  qemu.rs  serial.rs  tty.rs  vga.rs
src/system/: gdt.rs  idt.rs  kshell.rs  memory.rs  mod.rs  ports.rs
tests/: basic_boot.rs  memory_alloc.rs  should_panic.rs  stack_overflow.rs
tools/: build.py  config.json  lines.sh
