[package]
name = "primoria"
version = "0.1.0"
edition = "2021"

# to not get errors from rust-analyser
[[bin]]
name = "primoria"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9"
spin = "0.5.2"