[package]
name = "primoria"
version = "0.1.0"
edition = "2021"

# to not get errors from rust-analyser
[[bin]]
name = "primoria"
path = "src/main.rs"
doctest = false
bench = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
bitflags = "2.5.0" # maybe remove?

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 60                   # 60 sec
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false