[package]
name = "primoria"
version = "0.1.0"
edition = "2021"

# to not get errors from rust-analyser
[[bin]]
name = "primoria"
path = "src/main.rs"
doctest = false
bench = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.9" # ok, from rust-osdev
x86_64 = "0.14.2" # ok, from rust-osdev
spin = "0.5.2" # maybe remove?
bitflags = "2.5.0" # maybe remove?
volatile = "*" # maybe remove?
pic8259 = "0.10.1" # definitevly to remove
pc-keyboard = "0.5.0" # maybe remove after shell?

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 60                   # 60 sec
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false